# FEUP-AEDA-proj

./: .gitignore  CMakeLists.txt  README.md  StreamZ_Apresentation [Guardado automaticamente].pptx  StreamZ_Apresentation.pptx  StreamZ_Apresentation2.pptx  StreamZ_Apresentation3.pptx  StreamZ_Apresentation4.pptx  StreamZ__P2.pptx  donation_final_data.txt  main.cpp  orders_final_data.txt  streams_DB.txt  streams_final_data.txt  users_DB.txt  users_final_data.txt
docs/: Doxyfile  diagram.xmi
src/: Manager.cpp  Manager.h
src/Accounts/: Account.cpp  Account.h  AdminAcc.cpp  AdminAcc.h  StreamerAcc.cpp  StreamerAcc.h  ViewerAcc.cpp  ViewerAcc.h
src/Exceptions/: DoesNotExist.h  EmptyDatabaseException.cpp  EmptyDatabaseException.h  NotInRangeValue.h  RestrictedAgeException.cpp  RestrictedAgeException.h
src/Exceptions/accounts/: WrongUserTypeException.cpp  WrongUserTypeException.h
src/Exceptions/date/: BadDateFormat.cpp  BadDateFormat.h  InvalidDate.cpp  InvalidDate.h
src/Exceptions/streams/: AlreadyInStreamException.cpp  AlreadyInStreamException.h  AlreadyInWhiteListException.cpp  AlreadyInWhiteListException.h  MaxViewersReach.cpp  MaxViewersReach.h  NotInStreamException.cpp  NotInStreamException.h  NotInWhiteListException.cpp  NotInWhiteListException.h  NotPrivateStreamException.cpp  NotPrivateStreamException.h  RestrictedStreamException.cpp  RestrictedStreamException.h
src/Exceptions/users/: AlreadyExists.h  DoesNotExist.h  FollowStreamerException.cpp  FollowStreamerException.h  InvalidPassword.cpp  InvalidPassword.h  NoSuchOrderException.cpp  NoSuchOrderException.h  OrdersEmptyException.cpp  OrdersEmptyException.h  OrdersFullException.cpp  OrdersFullException.h  RestrictedAgeException.cpp  RestrictedAgeException.h
src/Streams/: Donation.cpp  Donation.h  FinishedStream.cpp  FinishedStream.h  LiveStream.cpp  LiveStream.h  PrivateStream.cpp  PrivateStream.h  PublicStream.cpp  PublicStream.h  Stream.cpp  Stream.h  privateStream.cpp  privateStream.h  publicStream.cpp  publicStream.h
src/Users/: Admin.cpp  Admin.h  Donation.cpp  Donation.h  Streamer.cpp  Streamer.h  User.cpp  User.h  Viewer.cpp  Viewer.h
src/Utils/: BST.h  Date.cpp  Date.h  utils.cpp  utils.h
src/managers/: AdminOps.cpp  AdminOps.h  Database.cpp  Database.h  DonationManager.cpp  DonationManager.h  LeaderBoard.cpp  LeaderBoard.h  SearchManager.cpp  SearchManager.h  SortingManager.cpp  SortingManager.h  StreamManager.cpp  StreamManager.h  StreamZ.cpp  StreamZ.h  UserManager.cpp  UserManager.h
